# moos-ivp-goni

./: CMakeLists.txt
claude-skills/: README.md
claude-skills/ivp-behavior-builder/: SKILL.md
claude-skills/ivp-behavior-builder/agents/: openai.yaml
claude-skills/ivp-behavior-builder/references/: behavior-build.md  (+3 more)
claude-skills/moos-alog-analysis/: SKILL.md
claude-skills/moos-app-builder/: SKILL.md
claude-skills/moos-ivp-docs/: SKILL.md
claude-skills/moos-ivp-eval-mission-builder/: SKILL.md
claude-skills/moos-ivp-harness-builder/: SKILL.md
claude-skills/moos-ivp-installer/: SKILL.md
claude-skills/moos-ivp-mission-builder/: SKILL.md
claude-skills/moos-ivp-repo-builder/: SKILL.md
missions/alder/: alder.bhv  alder.moos
missions/rescue_athens/: init_field.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  results.txt  targ_abe.bhv  targ_abe.moos  targ_abe01.bhv  targ_abe01.moos  targ_ben.bhv  targ_ben.moos  targ_ben01.bhv  targ_ben01.moos  targ_cal.bhv  targ_cal.moos  targ_deb.bhv  targ_deb.moos  targ_shoreside.moos  vcolors.txt  vpositions.txt
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_bhv_scout/: BHV_Scout.cpp  BHV_Scout.h
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pGenRescue/: CMakeLists.txt  GenRescue.cpp  GenRescue.h  GenRescue_Info.cpp  main.cpp
src/pOdometry/: Odometry.cpp  Odometry.h
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h
(+196 files in other folders)
